# opm-v2

./: .gitignore  OPM_alignment_config.cfg  OPM_mmgr.cfg  README.md  opm_config.json  opm_config_20250312.json  opm_config_v2.json  pyproject.toml
.github/workflows/: ci.yml
20260713_161628_test_003/: stage_position_voltage.json
archieved_configs/: OPM_alignment_config.cfg  OPM_mmgr_20260312.cfg  opm_config_20250216.json  opm_config_20250228.json  opm_config_20250304.json  opm_config_20250312.json  opm_config_20260315.json
archived_configs/: opm_config_20250218.json
scripts/: ao_grid_mapping.py  ao_positions.py  fluidics_triggering.py  load_ao_optimization_results.py  load_test_acquisition.py  make_gifs_from_data.py  parse_ao_results.py  parse_grid_ao_results.py  parse_grid_ao_results_deprecated.py  push_pull.py  stage_position_generation.py  stage_positions.py  stage_to_ao_grid_positions.py
scripts/legacy_analysis/: ao_positions.py  fluidics_triggering.py  load_ao_optimization_results.py  load_test_acquisition.py  make_gifs_from_data.py  parse_grid_ao_results.py  parse_grid_ao_results_deprecated.py  push_pull.py  stage_position_generation.py  stage_positions.py  stage_to_ao_grid_positions.py
src/opm_v2/: __init__.py  _app.py  _app_v2.py  _main.py  _opm_app.py  _opm_app_dev.py  _update_config_widget.py  _update_config_widget_v2.py
src/opm_v2/engine/: debug_printing.py  debug_printing_v2.py  event_review.py  event_review_v2.py  opm_custom_actions.py  opm_custom_events.py  opm_custom_events_v2.py  opm_engine.py  opm_engine_dev.py  opm_engine_v2.py  review_event_structure.py  review_event_structure_v2.py  setup_events.py  setup_events_dev.py  setup_events_v2.py
src/opm_v2/handlers/: opm_data_handler.py
src/opm_v2/hardware/: AOMirror.py  APump.py  ASI.py  ElveFlow.py  OPMNIDAQ.py  PicardShutter.py  test_flat_pos.py
src/opm_v2/hardware/ao_wfc_configuration/: 202508015_interaction_matrix.aoc  202508018_tilted_interaction_matrix.aoc  20250808_laser_interaction_matrix.aoc
src/opm_v2/hardware/ao_wfc_setup/: closed_loop_main.py  generate_interaction_matrix.py  keep_mirror_flat.py  laser_sensorless_ao.py
src/opm_v2/hardware/wfc_configuration_files/: 202508021_tilted_interaction_matrix.aoc  202508026_tilted_interaction_matrix.aoc  20260708_straight_interaction_matrix.aoc  Untitled-1.json  (+3 more)
src/opm_v2/utils/: autofocus_remote_unit.py  coverslip.py  elveflow_control.py  fluidics_control.py  position_tools.py  script_io.py  sensorless_ao.py  sensorless_ao_v2.py
tests/: README.md  __init__.py  _fixtures.py  conftest.py  load_ao_optimization_results.py  opm_app_save_events.py  test_ao_grid_mapping.py  test_ao_mirror_simulation.py  test_ao_positions.py  test_app_bootstrap.py  test_apump_simulation.py  test_coverslip.py  test_demo_acquisition.py  test_event_compatibility.py  test_event_planning.py  test_fluidics_triggering.py  test_gui_integration.py  test_make_gifs_from_data.py  test_mirror_scan_events.py  test_nidaq_simulation.py  test_ob1_simulation.py  test_opm_data_handler.py  test_opm_engine.py  test_parse_ao_results.py  test_parse_grid_ao_results.py  test_parse_grid_ao_results_depreciated.py  test_picard_shutter_simulation.py  test_position_tools.py  test_projection_events.py  test_pushpul.py  test_sample_depth_events.py  test_sensorless_ao.py  test_stage_positions.py  test_stage_scan_events.py  test_stage_to_aogrid_positions.py  test_stagepositions.py
tests/configurations/: event_compatibility.json  gui_integration.json
tests/gui/: conftest.py  test_app_bootstrap.py  test_opm_gui.py
tests/integration/: conftest.py  test_acquisition_strategies.py  test_gui_acquisition.py  test_mirror_scan_events.py  test_opm_data_handler.py  test_picard_driver.py  test_projection_events.py  test_sample_depth_events.py  test_scripts.py  test_sensorless_ao.py  test_stage_scan_events.py
tests/unit/: conftest.py  test_nidaq.py  test_opm_engine.py  test_picard_shutter.py  test_position_tools.py
(+14 files in other folders)
