# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "opm-v2"
version = "0.2.0"
description = "qi2lab-OPM control using pymmcore-gui"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Douglas Shepherd", email = "douglas.shepherd@asu.edu" }, { name = "Steven Sheppard", email = "sjshepp2@asu.edu" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
# add your package dependencies here
dependencies = [
    "imageio",
    "matplotlib",
    "numba",
    "ome-writers[tensorstore]",
    "pymmcore-gui",
    "pymmcore-plus[cli,simulate]",
    "pymmcore-widgets",
    "pycparser==2.21",
    "pydaqmx; sys_platform == 'win32'",
    "pyfirmata2",
    "pythonnet==3.0.3; sys_platform == 'win32'",
    "pyserial",
    "scipy",
    "zarr",
]
[tool.hatch.metadata]
allow-direct-references = true

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
# "extras" (e.g. for `pip install .[test]`)
[project.optional-dependencies]
# add dependencies used for testing here
test = ["msgpack", "pytest>=8", "pytest-cov>=7", "pytest-qt>=4.4", "ruff"]
# add anything else you like to have in your dev environment here
dev = [
    "ipython",
    "msgpack",
    "pdbpp",  # https://github.com/pdbpp/pdbpp
    "pytest>=8",
    "pytest-cov>=7",
    "pytest-qt>=4.4",
    "rich",  # https://github.com/Textualize/rich
    "ruff",
]

[tool.uv.sources]
pymmcore-plus = { git = "https://github.com/pymmcore-plus/pymmcore-plus", rev = "70d330d57c97d5936e4aa8efefcab6bb161c0030" }
pymmcore-gui = { git = "https://github.com/pymmcore-plus/pymmcore-gui", rev = "0cf73c58e287559d9d1e0b85f99824f8afd95d19" }
pymmcore-widgets = { git = "https://github.com/pymmcore-plus/pymmcore-widgets", rev = "d61a158cb9bfc5da316f2d6cb74ea8c24206d3e4" }
ome-writers = { git = "https://github.com/pymmcore-plus/ome-writers", rev = "bac0f391eeadc1083b70cbafb2e5efd3e7075df9" }

[project.urls]
homepage = "https://github.com/qi2lab/opm-v2"
repository = "https://github.com/qi2lab/opm-v2"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
[project.scripts]
opm-v2 = "opm_v2._main:main"

# [project.entry-points."some.group"]
# tomatoes = "opm_v2:main_tomatoes"

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py312"
preview = true
extend-exclude = [
    "src/opm_v2/hardware/test_flat_pos.py",
    "src/opm_v2/hardware/wfc_setup_scripts",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "DOC", "B006", "B008", "B904", "UP"]
ignore = ["D401", "E501", "UP045"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
line-ending = "lf"

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["opm_v2"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
]
